--- a/style.css
+++ b/style.css
@@ -1,105 +1,91 @@
+
 html {
-    scroll-behavior: smooth
+ scroll-behavior: smooth;
 }
 
-#map iframe {
+#map iframe
+{
     width: 50%;
     float: left;
     padding-top: 5px;
 }
 
-.contact_1 h3 {
+.contact_1 h3
+{
     display: inline;
 }
-
-.contact_1 a {
+.contact_1 a
+{
     text-shadow: none;
 }
 
-#footer {
-    height: 20px;
-    background-color: white;
-}
+#footer{
+  height: 20px;
+  background-color:white;
+  }
 
-input {
+input
+{
     background: grey
 }
 
-.announcement {
-    background-color: #337ab7;
-    width: 100%;
-    height: 30px;
+.announcement{
+background-color:#337ab7;
+width: 100%;
+height: 30px;
 }
 
-#marqueeStyle {
-    width: 100%;
-    direction: right;
-    height: 100px;
-    color: beige;
-    font-size: 120%;
+#marqueeStyle{
+  width:100%;
+  direction:right;
+  height:100px;
+  color: beige;
+  font-size:120%;
 }
 
-#video {
-    width: 100%;
-    height: 500px;
-    border: none;
+#video{
+  width:100%;
+  height:500px;
+  border: none;
 }
 
 /* Clearfix (clear floats) */
 .row::after {
-    content: "";
-    clear: both;
-    display: table;
+  content: "";
+  clear: both;
+  display: table;
 }
 
-.travel_mainDiv {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-    border: 1px solid #c7c7c7;
+.travel_mainDiv
+{
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  border: 1px solid #c7c7c7;
 }
 
-.travel_mainDiv img {
-    width: 100%;
-    height: 300px;
+.travel_mainDiv img
+{
+  width: 100%;
+  height:300px;
+} 
+
+.travel_mainDiv hr
+{
+    width: 100%; 
 }
 
-.travel_mainDiv hr {
-    width: 100%;
+.travel_mainDiv h5 , .travel_mainDiv p
+{
+margin-left: 20px;
 }
 
-.travel_mainDiv h5,
-.travel_mainDiv p {
-    margin-left: 20px;
+#achievementsID{
+ padding-bottom: 10px;
 }
 
-.school img {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-    border: 1px solid #c7c7c7;
-}
-
-.school img img {
-    width: 100%;
-    height: 300px;
-}
-
-.school img hr {
-    width: 100%;
-}
-
-.school img h5,
-.school img p {
-    margin-left: 20px;
-}
-
-
-#achievementsID {
-    padding-bottom: 10px;
-}
-
-.movie_head {
+.movie_head
+{
     font-size: 20px;
     padding: 6px 22px;
     border-radius: 10px;
@@ -108,10 +94,51 @@ input {
     display: inline-block;
 }
 
-.movie_head i {
-    float: right;
+.movie_head i
+{
+float: right;
 }
 
-.movie_text span {
-    color: #ff7700;
+.movie_text span
+{
+color: #ff7700;
 }
+
+.environment_li
+{
+  margin-top: 13px;
+}
+
+.environment_li h4
+{
+    border-bottom: 1px solid white;
+    padding: 8px;
+}
+
+.environment_li img
+{
+  border-radius: 25px;
+  height: 250px;
+}
+
+.environment_li p
+{
+  margin-top:10px;
+}
+
+.header_entrepreneur
+{
+  line-height: 2;
+}
+
+.book
+{
+  cursor: pointer;
+}
+
+.book hr
+{
+  margin-bottom: 10px;
+}
+
+
